RESOLVED FIXED 142948
DFG OSR exit shouldn't assume that the frame count for exit is greater than the frame count in DFG
https://bugs.webkit.org/show_bug.cgi?id=142948
Summary DFG OSR exit shouldn't assume that the frame count for exit is greater than t...
Filip Pizlo
Reported 2015-03-22 11:28:57 PDT
Patch forthcoming.
Attachments
the patch (7.78 KB, patch)
2015-03-22 11:38 PDT, Filip Pizlo
sam: review+
Filip Pizlo
Comment 1 2015-03-22 11:38:24 PDT
Created attachment 249202 [details] the patch
Filip Pizlo
Comment 2 2015-03-22 12:36:23 PDT
Note You need to log in before you can comment on or make changes to this bug.